--- a/codigos/mqtt/package.json
+++ b/codigos/mqtt/package.json
@@ -2,8 +2,14 @@
   "dependencies": {
     "axios": "^1.3.5",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "json": "^11.0.0",
-    "mosca": "^2.8.3"
+    "mosca": "^2.8.3",
+    "redis": "^4.6.5",
+    "redis-connection-pool": "^4.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.11"
   }
 }
