--- a/codigos/mqtt/package.json
+++ b/codigos/mqtt/package.json
@@ -7,7 +7,8 @@
     "json": "^11.0.0",
     "mosca": "^2.8.3",
     "redis": "^4.6.5",
-    "redis-connection-pool": "^4.0.1"
+    "redis-connection-pool": "^4.0.1",
+    "typeorm": "^0.3.14"
   },
   "devDependencies": {
     "@types/node": "^18.15.11"
