--- a/codigos/backend/package.json
+++ b/codigos/backend/package.json
@@ -1,16 +1,20 @@
 {
-  "dependencies": {
-    "axios": "^1.3.5",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "json": "^11.0.0",
-    "mosca": "^2.8.3",
-    "redis": "^4.6.5",
-    "redis-connection-pool": "^4.0.1",
-    "typeorm": "^0.3.14"
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "Luis Martins",
+  "license": "ISC",
   "devDependencies": {
-    "@types/node": "^18.15.11"
+    "@types/node": "^18.15.11",
+    "babel-preset-es2015": "^6.24.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "redis-connection-pool": "^4.0.1"
   }
 }
