--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 dist
 node_modules
 yarn-error.log
+
+codigos/mobile/blue_connection/.flutter-plugins
+
+codigos/mobile/blue_connection/.flutter-plugins-dependencies
