adicionando projeto do uracar abordado em sala de aula

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ yarn-error.log
 codigos/mobile/blue_connection/.flutter-plugins
 
 codigos/mobile/blue_connection/.flutter-plugins-dependencies
+
+codigos/arduino/uracar/.vscode/extensions.json
